<resources>
    <string name="app_name">Photo Album</string>
    <string name="app_author">JChip Game</string>

    <string name="album_title">Album</string>
    <string name="photo_title">Photo</string>

    <string name="album_default_name">Photo album #</string>
    <string name="album_alert_delete">Are you sure you want to delete?</string>
    <string name="album_alert_link">There are widgets link to it, are you sure you want to delete?</string>

    <string name="font_sample">Input text</string>
    <string name="font_support">Font might not be displaying properly</string>

    <string name="about_name">App name</string>
    <string name="about_version">Version</string>
    <string name="about_author">Author</string>
    <string name="about_contact">Contact</string>
    <string name="about_email">jchipgame@gmail.com</string>
    <string name="about_source">Other apps</string>
    <string name="about_store">play.google.com/store/search?q=jchip</string>
    <string name="about_owned">Owned Sokoban (Boxman) Classic</string>
    <string name="about_play">click image to play</string>

    <string name="dialog_permission_title">Select Photos</string>
    <string name="dialog_permission_description">Please grant to access the storage</string>
    <string name="dialog_permission_ok">OK</string>
    <string name="dialog_permission_cancel">Cancel</string>

    <string name="dialog_deny_title">Photo selection has been denied</string>
    <string name="dialog_deny_description">Please go to phone settings -> Apps -> %1$s -> Permission -> Storage -> Allow</string>
    <string name="dialog_deny_go_setting">Go to settings</string>

    <string name="photo_all_folder">All Photos</string>
    <string name="photo_type_gif">GIF</string>
    <string name="photo_folder_count">%1$s (%2$d)</string>
    <string name="photo_limit_count">Select at most %d sheets</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>

    <string name="setting_slideshow_period">Slideshow period</string>
    <string name="setting_background_color">Background color</string>
    <string name="setting_default_frame">Default frame</string>

    <string name="widget_prompt_message">Please tap or double tap the widget.</string>

    <string-array name="setting_slide_period">
        <item>No slide</item>
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>40 seconds</item>
        <item>50 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
</resources>

