<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/album_about_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-1dp"
        android:alpha="0.80"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/about_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:alpha="0.70"
        android:fontFamily="sans-serif-condensed"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-1dp"
        android:alpha="0.80"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/about_version"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:alpha="0.70"
        android:fontFamily="sans-serif-condensed"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-1dp"
        android:alpha="0.80"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/about_author"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:alpha="0.70"
        android:fontFamily="sans-serif-condensed"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/app_author"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-2dp"
        android:alpha="0.80"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/about_source"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/store_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:alpha="0.90"
        android:fontFamily="sans-serif-condensed"
        android:singleLine="true"
        android:text="@string/about_store"
        android:textColor="?colorAccent"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-2dp"
        android:alpha="0.80"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/about_contact"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:alpha="0.90"
        android:autoLink="email"
        android:fontFamily="sans-serif-condensed"
        android:singleLine="true"
        android:text="@string/about_email"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:alpha="0.70"
        android:fontFamily="sans-serif-condensed"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/about_owned"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/about_image"
        android:layout_width="300dp"
        android:layout_height="134dp"
        android:layout_gravity="center_horizontal|bottom"
        android:adjustViewBounds="true"
        android:alpha="0.95"
        android:background="@drawable/font_edit_image"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/album_about_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.70"
        android:fontFamily="sans-serif"
        android:hint="@string/about_play"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/about_play"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>
