<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/album_about_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.80"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/about_name"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            android:alpha="0.70"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.80"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/about_version"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            android:alpha="0.70"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.80"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/about_author"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            android:alpha="0.70"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/app_author"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.80"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/about_source"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/store_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            android:alpha="0.90"
            android:fontFamily="sans-serif-condensed"
            android:singleLine="true"
            android:text="@string/about_store"
            android:textColor="?colorAccent"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.80"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/about_contact"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            android:alpha="0.90"
            android:autoLink="email"
            android:fontFamily="sans-serif-condensed"
            android:singleLine="true"
            android:text="@string/about_email"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.70"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/about_owned"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            android:adjustViewBounds="true"
            android:alpha="0.95"
            android:background="@drawable/font_edit_image"
            android:scaleType="fitXY"
            android:src="@drawable/album_about_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.70"
            android:fontFamily="sans-serif"
            android:hint="click to play"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/about_play"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12dp" />

    </LinearLayout>

</LinearLayout>
