<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album_setting_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"

    android:layout_marginEnd="20dp"

    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".ActivitySetting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:alpha="0.80"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/setting_slideshow_period"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="6dp"
                        android:alpha="0.80"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="("
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/slideshow_speed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:alpha="0.80"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:alpha="0.80"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text=")"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/setting_reset"
                        style="@style/mini_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:contentDescription="@null"
                        android:src="@drawable/setting_reset" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/slideshow_speed"
                    style="@style/font_color_seeker"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:max="255"
                    android:progressTint="#BBFFFFFF"
                    android:saveEnabled="false"
                    android:thumbTint="#BBFFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.80"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/setting_background_color"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/background_color_text"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:alpha="1.0"
                        android:fontFamily="sans-serif"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text=" "
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/background_color_r"
                    style="@style/font_color_seeker"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:max="255"
                    android:progressTint="#FF0000"
                    android:saveEnabled="false"
                    android:thumbTint="#FF0000" />

                <SeekBar
                    android:id="@+id/background_color_g"
                    style="@style/font_color_seeker"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:max="255"
                    android:progressTint="#00FF00"
                    android:thumbTint="#00FF00" />

                <SeekBar
                    android:id="@+id/background_color_b"
                    style="@style/font_color_seeker"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:max="255"
                    android:progressTint="#0000FF"
                    android:thumbTint="#0000FF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:alpha="0.80"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/setting_default_frame"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/setting_frame_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center">

                    <include layout="@layout/album_photo_item" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>


